@@ -16,13 +16,7 @@ import java.util.HashMap;
 import java.util.TimeZone;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.*;
 
 /**
  * Loads the native libraw lib and process the image in the native space. This
@@ -110,7 +104,7 @@ public class LibrawImage {
             Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Please call loadLibs as static method first!");
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }        
-        try ( var scope = ResourceScope.newSharedScope()) {
+        try ( var scope = MemorySession.openShared()) {
             if (operatingSystem.contains("WIN")) {
                 MemoryAddress iprc = org.libraw.win.libraw_h.libraw_init(0);
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Memory dddress native lib was: " + iprc.toRawLongValue());
@@ -124,7 +118,7 @@ public class LibrawImage {
                 org.libraw.win.libraw_output_params_t.user_qual$set(params$slice, 0);              
 
                 MemorySegment inputStreamBytes = MemorySegment.ofArray(sourceFileAsByteArray);
-                MemorySegment allocateNative = SegmentAllocator.nativeAllocator(scope).allocateArray(org.libraw.win.libraw_h.C_CHAR, sourceFileAsByteArray);
+                MemorySegment allocateNative = SegmentAllocator.newNativeArena(scope).allocateArray(org.libraw.win.libraw_h.C_CHAR, sourceFileAsByteArray);
                 int k = org.libraw.win.libraw_h.libraw_open_buffer(iprc, allocateNative, inputStreamBytes.byteSize());
                 if (k > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Cannot open stream, return value was: " + k);
@@ -145,7 +139,7 @@ public class LibrawImage {
                 org.libraw.win.libraw_h.libraw_dcraw_process(iprc);
                 ByteArrayOutputStream bo = new ByteArrayOutputStream();
 
-                MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
+                MemorySegment errorCode = SegmentAllocator.newNativeArena(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
                 MemoryAddress mem_image_adr = org.libraw.win.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode.address());
                 MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
                 MemorySegment data$slice = org.libraw.win.libraw_processed_image_t.data$slice(imageMemSegment);
@@ -194,7 +188,7 @@ public class LibrawImage {
                 
 
                 MemorySegment inputStreamBytes = MemorySegment.ofArray(sourceFileAsByteArray);
-                MemorySegment allocateNative = SegmentAllocator.nativeAllocator(scope).allocateArray(org.libraw.linuxosx.libraw_h.C_CHAR, sourceFileAsByteArray);
+                MemorySegment allocateNative = SegmentAllocator.newNativeArena(scope).allocateArray(org.libraw.linuxosx.libraw_h.C_CHAR, sourceFileAsByteArray);
                 int k = org.libraw.linuxosx.libraw_h.libraw_open_buffer(iprc, allocateNative, inputStreamBytes.byteSize());
                 if (k > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.SEVERE, null, "Cannot open stream, return value was: " + k);
@@ -215,7 +209,7 @@ public class LibrawImage {
                 org.libraw.linuxosx.libraw_h.libraw_dcraw_process(iprc);
                 ByteArrayOutputStream bo = new ByteArrayOutputStream();
 
-                MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
+                MemorySegment errorCode = SegmentAllocator.newNativeArena(scope).allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
                 MemoryAddress mem_image_adr = org.libraw.linuxosx.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode.address());
                 MemorySegment imageMemSegment = org.libraw.linuxosx.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
                 MemorySegment data$slice = org.libraw.linuxosx.libraw_processed_image_t.data$slice(imageMemSegment);
@@ -271,7 +265,7 @@ public class LibrawImage {
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }
 
-        try ( var scope = ResourceScope.newSharedScope()) {
+        try ( var scope = MemorySession.openShared()) {
             if (operatingSystem.contains("WIN")) {
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
                 MemoryAddress iprc = org.libraw.win.libraw_h.libraw_init(0);
@@ -284,7 +278,7 @@ public class LibrawImage {
                 org.libraw.win.libraw_output_params_t.user_qual$set(params$slice, 0);            
 
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL).address());
+                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.newNativeArena(scope).allocateUtf8String(imageFileURL).address());
                 if (libraw_open_file > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
                     throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
@@ -305,7 +299,7 @@ public class LibrawImage {
 
                 ByteArrayOutputStream bo = new ByteArrayOutputStream();
 
-                MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
+                MemorySegment errorCode = SegmentAllocator.newNativeArena(scope).allocate(org.libraw.win.libraw_h.C_INT.byteSize());
                 MemoryAddress mem_image_adr = org.libraw.win.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode.address());
                 MemorySegment imageMemSegment = org.libraw.win.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
                 MemorySegment data$slice = org.libraw.win.libraw_processed_image_t.data$slice(imageMemSegment);
@@ -350,7 +344,7 @@ public class LibrawImage {
                 org.libraw.linuxosx.libraw_output_params_t.user_qual$set(params$slice, 0);              
 
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL).address());
+                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.newNativeArena(scope).allocateUtf8String(imageFileURL).address());
                 if (libraw_open_file > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
                     throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
@@ -371,7 +365,7 @@ public class LibrawImage {
 
                 ByteArrayOutputStream bo = new ByteArrayOutputStream();
 
-                MemorySegment errorCode = SegmentAllocator.nativeAllocator(scope).allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
+                MemorySegment errorCode = SegmentAllocator.newNativeArena(scope).allocate(org.libraw.linuxosx.libraw_h.C_INT.byteSize());
                 MemoryAddress mem_image_adr = org.libraw.linuxosx.libraw_h.libraw_dcraw_make_mem_image(iprc, errorCode.address());
                 MemorySegment imageMemSegment = org.libraw.linuxosx.libraw_processed_image_t.ofAddress(mem_image_adr, scope);
                 MemorySegment data$slice = org.libraw.linuxosx.libraw_processed_image_t.data$slice(imageMemSegment);
@@ -442,14 +436,14 @@ public class LibrawImage {
             throw new IllegalArgumentException("Please call loadLibs as static method first!");
         }                
         HashMap<String, String> retMap = new HashMap<>();
-        try ( var scope = ResourceScope.newSharedScope()) {
+        try ( var scope = MemorySession.openShared()) {
             if (operatingSystem.contains("WIN")) {
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Init native memory");
                 MemoryAddress iprc = org.libraw.win.libraw_h.libraw_init(0);
                 MemorySegment datasegment = org.libraw.win.libraw_data_t.ofAddress(iprc, scope);
 
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL).address());
+                int libraw_open_file = org.libraw.win.libraw_h.libraw_open_file(iprc, SegmentAllocator.newNativeArena(scope).allocateUtf8String(imageFileURL).address());
                 if (libraw_open_file > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
                     throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
@@ -557,7 +551,7 @@ public class LibrawImage {
                 MemorySegment datasegment = org.libraw.linuxosx.libraw_data_t.ofAddress(iprc, scope);
 
                 Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Open file");
-                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.nativeAllocator(scope).allocateUtf8String(imageFileURL).address());
+                int libraw_open_file = org.libraw.linuxosx.libraw_h.libraw_open_file(iprc, SegmentAllocator.newNativeArena(scope).allocateUtf8String(imageFileURL).address());
                 if (libraw_open_file > 0) {
                     Logger.getLogger(LibrawImage.class.getName()).log(Level.FINEST, null, "Cannot open file stream '" + imageFileURL + "'!" + libraw_open_file);
                     throw new IOException("Cannot open file stream '" + imageFileURL + "'! " + libraw_open_file);
